--- a/index.html
+++ b/index.html
@@ -178,11 +178,17 @@
         </div>
       </section>
 
-      <!-- PROGRAM PAGES (concise paragraphs only) -->
+      <!-- PROGRAM PAGES (exact wording) -->
+
       <section class="panel" data-panel="therapy">
         <div class="card">
           <h2>Therapy — AI-Assisted Online <span class="badge">Soon</span></h2>
-          <p>Human-led therapy delivered by licensed clinicians via video, phone, or chat—lightly assisted by an AI copilot for faster notes and tailored exercises.</p>
+          <p>Human-led therapy delivered by licensed clinicians via video, phone, or chat—enhanced by an AI copilot for faster notes and tailored exercises.</p>
+          <ul>
+            <li>Fast remote access, multilingual support, low-bandwidth mode, clear goals (CBT/DBT).</li>
+            <li>Auto-drafted notes, care-plan templates, supervision-ready summaries, consistent outcomes tracking.</li>
+          </ul>
+          <p class="muted"><strong>Disclosure:</strong> AI assists clinicians; it never diagnoses or replaces clinical judgment.</p>
           <div class="row"><button class="btn" disabled>Start Therapy (coming soon)</button></div>
         </div>
       </section>
@@ -190,7 +196,11 @@
       <section class="panel" data-panel="counseling">
         <div class="card">
           <h2>Counseling — AI-Assisted Online <span class="badge">Soon</span></h2>
-          <p>Brief, skills-focused sessions for everyday challenges, with clinician review and AI-assisted summaries.</p>
+          <p>Brief, skills-focused sessions for day-to-day challenges, with clinician review and AI-assisted summaries.</p>
+          <ul>
+            <li>Quick starts, practical tools, flexible chat/video.</li>
+            <li>Standardized short-form notes, resource links, simple escalation to Therapy when needed.</li>
+          </ul>
           <div class="row"><button class="btn" disabled>Book Counseling (coming soon)</button></div>
         </div>
       </section>
@@ -198,7 +208,11 @@
       <section class="panel" data-panel="assessment">
         <div class="card">
           <h2>Assessment — Remote, AI-Guided <span class="badge">Soon</span></h2>
-          <p>Clinician-reviewed intake using validated screeners (PHQ-9, GAD-7, C-SSRS). AI prompts help ensure completeness; clinicians confirm results.</p>
+          <p>Clinician-reviewed intake with evidence-based screeners (e.g., PHQ-9, GAD-7, C-SSRS). AI prompts ensure completeness; clinicians confirm results.</p>
+          <ul>
+            <li>Faster onboarding, clear next steps, language accessibility.</li>
+            <li>Fewer admin gaps, consistent documentation, smarter triage and referrals.</li>
+          </ul>
           <div class="row"><button class="btn" disabled>Start Assessment (coming soon)</button></div>
         </div>
       </section>
@@ -206,7 +220,11 @@
       <section class="panel" data-panel="safety">
         <div class="card">
           <h2>Safety Plan — Digital Plan with AI Support <span class="badge">Soon</span></h2>
-          <p>Create and update a personal safety plan—warning signs, coping steps, supports, and crisis options—with gentle AI reminders. Clinicians approve finalized plans.</p>
+          <p>Create, update, and share a personal safety plan—warning signs, coping steps, supports, crisis options. AI reminders help keep it current; clinicians approve.</p>
+          <ul>
+            <li>One-tap share with family/providers, gentle check-ins, export to PDF.</li>
+            <li>Templates, version history, approvals, audit-ready logs.</li>
+          </ul>
           <p class="muted"><strong>Emergency:</strong> Call 911 or 988. This tool does not replace emergency services.</p>
           <div class="row"><button class="btn" disabled>Create Safety Plan (coming soon)</button></div>
         </div>
@@ -215,7 +233,11 @@
       <section class="panel" data-panel="giving">
         <div class="card">
           <h2>Giving (Elwyn) — Support · Donate · Sponsor Care</h2>
-          <p>Help fund access to therapy, assessments, and safety plans for families in need through one-time gifts, monthly support, or session sponsorships.</p>
+          <p>Power access to therapy, assessments, and safety plans for families in need.</p>
+          <ul>
+            <li>One-time gifts, monthly giving, or sponsor sessions; impact updates.</li>
+            <li>Employer match, volunteer options, transparent reporting and receipts.</li>
+          </ul>
           <div class="row">
             <button class="btn primary" disabled>Donate (coming soon)</button>
             <button class="btn" disabled>Sponsor a Session (coming soon)</button>
