--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <section class="panel is-visible" data-panel="chat">
         <div class="card">
           <h2>Ask Elwyn AI</h2>
-          <p class="muted">Smart chat with built-in tools for time, weather, and web/news lookups.</p>
+          <p class="muted">Smart chat with built-in tools</p>
           <div class="grid">
             <div id="chatLog" class="chat-log" aria-live="polite"></div>
             <form id="chatForm" class="grid">
